css/pips.css
body,html{
    background-image: url('../images/webAppBackground.jpg');
    background-repeat: round;
    backface-visibility: visible;
    width: 100%;
}
.title{
    border-top: 0cm;
    display: block;
    padding: 1rem;
    color: black;
    padding-left: 35%;
    padding-right: 35%;
    background-color: #e9ecef;
    font-size:2em;
    align-content: center;
}

p{
    font-size: 15px;
    color: black;
}
   
.alertBoxes{
    padding: 2px;
}

.image-editer{        
    align-content: center;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
.image-image {
    display: block;
    align-content: center;
    margin-left: auto;
    margin-right: auto;
}
  
image:hover {
    cursor: crosshair;
}

.image-controls{
    position: absolute;
    width: fit-content;
    margin-left: 0%;
    margin-right: 12%;
    display: block;
    align-content: left;
    padding-right:auto;
    left: 0rem;
    top: 0rem;
    padding-left: 0%;            
}

.image-symbols{
    margin-left: auto;
    margin-right:auto;
    background-color: #d9d9d9;
    border: 5px solid #000000;
    width: 400px;
}
.cropit-preview {
    background-color: #f8f8f8;
    background-size: cover;
    border: 20px solid #000000;
    border-radius: 3px;
    margin-top: 7px;
    margin-left: 25%;
    width: 600px;
    height: 600px;
}
.cropit-preview-image-container {
    cursor: move;
}

.image-size-label {
    margin-top: 10px;
}
.export {
    display: block;
}
.button {
    width:90%;
    height: auto;
}
.canvas-legend {
    height: 50px;
}
svg{ 
    position: relative;
    text-align: center; 
    top: 0; 
    left: 5rem;
    margin-right: auto;
    margin-left: auto;
    border: 5%; 
}

.draggable{
    cursor: move;
}

.resize{
    pointer-events: painted;
}

.bottom-right{
    cursor:nwse-resize;
}

.bottom-left{
    cursor:nesw-resize;
}
.top-left{
    cursor:nwse-resize;
}

.top-right{
    cursor:nesw-resize;
}

.top{
    cursor:ns-resize;
}
.bottom{
    cursor:ns-resize;
}
.left{
    cursor:ew-resize;
}
.right{
    cursor:ew-resize;
}

li{
    padding-top:2rem;
    right: 80%;
    padding-left: 5rem; 
    list-style-type: none;
    margin-left: auto;
    margin-right: 10%;
}
.btnList{
    padding-top: 0rem;
    padding-left: 0rem;
    padding-right: 1rem;
    border: 2rem;
    display: inline;
}

